tests/fixtures/compile_errors/call_keccak_with_wrong_type.fe
contract Bar:
    pass

contract Foo:

    pub def foo():
       keccak256(true)
